--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "clsx": "^2.0.0",
-    "next": "14.0.2",
+    "next": "^14.0.4",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2"
